--- a/index.html
+++ b/index.html
@@ -8,16 +8,73 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link rel="stylesheet" media="screen" href="assets/css/style.css" />
-    <title>Document</title>
+    <title>Hiring Profile</title>
   </head>
   <body>
     <!--container start-->
     <div class="container">
       <!--header section start-->
-      <header></header>
+      <header>
+        <div class="wrapper">
+          <nav class="nav-bar">
+            <span class="icon left-arrow">Left arrow</span>
+            <span class="icon star">Star</span>
+          </nav>
+          <h1>Jon B.Elliott</h1>
+          <figure>
+            <img src="./assets/images/avatar.jpg" alt="Hero Image" />
+          </figure>
+        </div>
+      </header>
       <!--header section ends-->
       <!--main section start-->
-      <main></main>
+      <main>
+        <div class="wrapper">
+          <div class="blue-card">
+            <p>
+              Justo tempor commodo id quo, mea vidisse albucius singulis te.
+              Natum eripuit electram at has, natum oratio percipitur in qui, ea
+              mucius invenire pri.
+            </p>
+          </div>
+          <div class="tab-container">
+            <ul class="tab-buttons">
+              <li><a href="#">About me</a></li>
+              <li><a href="#">SKILLS</a></li>
+              <li><a href="#">Portfolio</a></li>
+            </ul>
+          </div>
+          <ul class="tab-container">
+            <li class="about">
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Necessitatibus optio harum sint voluptas culpa voluptatibus
+                debitis! Voluptatem repellat rem provident amet magnam doloribus
+                aperiam ipsam harum id. Itaque, eos inventore.
+              </p>
+            </li>
+            <li class="skills">
+              <div class="skills-container">
+                <div class="skill1">
+                  <p>Advertising</p>
+                  <span></span>
+                </div>
+                <div class="skill2">
+                  <p>Wedding</p>
+                  <span></span>
+                </div>
+                <div class="skill3">
+                  <p>Fashion</p>
+                  <span></span>
+                </div>
+              </div>
+            </li>
+            <li>
+              <button>HIRE ME</button>
+            </li>
+          </ul>
+        </div>
+      </main>
       <!--main section end-->
       <!--footer section start-->
       <footer></footer>
