--- a/index.html
+++ b/index.html
@@ -29,50 +29,56 @@
       <!--header section ends-->
       <!--main section start-->
       <main>
-        <div class="wrapper">
-          <div class="blue-card">
+        <div class="blue-card">
+          <div class="wrapper">
             <p>
               Justo tempor commodo id quo, mea vidisse albucius singulis te.
               Natum eripuit electram at has, natum oratio percipitur in qui, ea
               mucius invenire pri.
             </p>
           </div>
-          <div class="tab-container">
+        </div>
+        <div class="tab-container">
+          <div class="wrapper">
             <ul class="tab-buttons">
               <li><a href="#">About me</a></li>
               <li><a href="#">SKILLS</a></li>
               <li><a href="#">Portfolio</a></li>
             </ul>
+            <ul class="tab-content">
+              <li class="about">
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Necessitatibus optio harum sint voluptas culpa voluptatibus
+                  debitis! Voluptatem repellat rem provident amet magnam
+                  doloribus aperiam ipsam harum id. Itaque, eos inventore.
+                </p>
+              </li>
+              <li class="skills">
+                <div class="skills-container">
+                  <div class="skill1">
+                    <p>Advertising</p>
+                    <span></span>
+                  </div>
+                  <div class="skill2">
+                    <p>Wedding</p>
+                    <span></span>
+                  </div>
+                  <div class="skill3">
+                    <p>Fashion</p>
+                    <span></span>
+                  </div>
+                </div>
+              </li>
+              <li class="portfolio">
+                <img src="./assets/images/avatar1.jpg" alt="Portfolio 1" />
+                <img src="./assets/images/avatar4.jpg" alt="Portfolio 2" />
+              </li>
+            </ul>
           </div>
-          <ul class="tab-container">
-            <li class="about">
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Necessitatibus optio harum sint voluptas culpa voluptatibus
-                debitis! Voluptatem repellat rem provident amet magnam doloribus
-                aperiam ipsam harum id. Itaque, eos inventore.
-              </p>
-            </li>
-            <li class="skills">
-              <div class="skills-container">
-                <div class="skill1">
-                  <p>Advertising</p>
-                  <span></span>
-                </div>
-                <div class="skill2">
-                  <p>Wedding</p>
-                  <span></span>
-                </div>
-                <div class="skill3">
-                  <p>Fashion</p>
-                  <span></span>
-                </div>
-              </div>
-            </li>
-            <li>
-              <button>HIRE ME</button>
-            </li>
-          </ul>
+        </div>
+        <div class="hire">
+          <button class="hire-btn">HIRE ME</button>
         </div>
       </main>
       <!--main section end-->
