basic css style

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="tab-container">
           <div class="wrapper">
             <ul class="tab-buttons">
-              <li><a href="#">About me</a></li>
+              <li class="first"><a href="#">About me</a></li>
               <li><a href="#">SKILLS</a></li>
               <li><a href="#">Portfolio</a></li>
             </ul>
