--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         <div class="tab-container">
           <div class="wrapper">
             <ul class="tab-buttons">
-              <li><a href="#">About me</a></li>
-              <li><a href="#">SKILLS</a></li>
-              <li><a href="#">Portfolio</a></li>
+              <li><a href="#FIXME">About me</a></li>
+              <li><a href="#FIXME">SKILLS</a></li>
+              <li><a href="#FIXME">Portfolio</a></li>
             </ul>
             <ul class="tab-content">
               <li class="about">
